--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>vue-element-admin</title>
+    <style rel="stylesheet">
+
+      body {
+
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+      }
+
+    </style>
   </head>
   <body>
     <script src=<%= htmlWebpackPlugin.options.path %>/tinymce4.7.5/tinymce.min.js></script>
