--- a/index.html
+++ b/index.html
@@ -17,10 +17,34 @@
         bottom: 0;
       }
 
+      .el-button {
+
+        color:#16325C !important;
+      }
+
+      .el-select-dropdown__item {
+
+        color:#54698D !important;
+      }
+
+      .el-input__inner {
+
+        color:#54698D !important;
+      }
+
+      .el-pagination.is-background .el-pager li:not(.disabled).active {
+
+        background-color: #445577 !important;
+      }
+
+      .el-breadcrumb__inner a {
+
+        color: #061C3F !important;
+      }
+
     </style>
   </head>
   <body>
-    <script src=<%= htmlWebpackPlugin.options.path %>/tinymce4.7.5/tinymce.min.js></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
