--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>智慧社区运营平台</title>
   </head>
   <body>
+    <div style="position: absolute;z-index: 0;width: 180px;background: #E0E5EE;height: 100%;left: 0;top: 0"></div>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
